package compiler

import (
	"crypto/sha256"
	"encoding/hex"
	"fmt"
	"time"

	"github.com/arda-org/arda-os/tools/compliance-compiler/internal/parser"
	"google.golang.org/protobuf/encoding/protojson"
	"google.golang.org/protobuf/proto"
)

// ComplianceCompiler provides the core compilation functionality
type ComplianceCompiler struct {
	optimizationLevel int
	enableCaching     bool
	maxDepth          int
	schemas           map[string]*PolicySchema
	templates         map[string]*PolicyTemplate
	auditMode         bool
	compressionLevel  int
}

// CompilerOptions configures the compiler behavior
type CompilerOptions struct {
	OptimizationLevel int                        // 0=none, 1=basic, 2=aggressive
	EnableCaching     bool                       // Enable compilation result caching
	MaxDepth          int                        // Maximum predicate nesting depth
	Schemas           map[string]*PolicySchema   // Jurisdiction-specific schemas
	Templates         map[string]*PolicyTemplate // Policy templates
	AuditMode         bool                       // Enable comprehensive audit trails
	CompressionLevel  int                        // 0=none, 1=light, 2=heavy
}

// NewComplianceCompiler creates a new compiler instance with specified options
func NewComplianceCompiler(options CompilerOptions) *ComplianceCompiler {
	if options.MaxDepth == 0 {
		options.MaxDepth = 10 // Default maximum nesting depth
	}

	return &ComplianceCompiler{
		optimizationLevel: options.OptimizationLevel,
		enableCaching:     options.EnableCaching,
		maxDepth:          options.MaxDepth,
		schemas:           options.Schemas,
		templates:         options.Templates,
		auditMode:         options.AuditMode,
		compressionLevel:  options.CompressionLevel,
	}
}

// CompilePolicy transforms a parsed YAML policy into an optimized protobuf message
func (c *ComplianceCompiler) CompilePolicy(yamlPolicy *parser.CompliancePolicy) (*CompilationResult, error) {
	startTime := time.Now()

	// Initialize audit trail if enabled
	var auditTrail *CompilationAuditTrail
	if c.auditMode {
		auditTrail = c.initializeAuditTrail(yamlPolicy)
	}

	// Phase 1: Initial validation
	if err := c.validateInputPolicy(yamlPolicy); err != nil {
		return nil, fmt.Errorf("input validation failed: %w", err)
	}

	// Phase 2: Apply policy templates if needed
	enhancedPolicy, err := c.applyPolicyTemplates(yamlPolicy)
	if err != nil {
		return nil, fmt.Errorf("template application failed: %w", err)
	}

	// Phase 3: Optimize predicate trees
	optimizationStats := &OptimizationStats{
		OptimizationDetails: make([]OptimizationStep, 0),
	}

	optimizedPolicy, err := c.optimizePolicy(enhancedPolicy, optimizationStats)
	if err != nil {
		return nil, fmt.Errorf("optimization failed: %w", err)
	}

	// Phase 4: Convert to final protobuf structure
	compiledPolicy, err := c.convertToProtobuf(optimizedPolicy)
	if err != nil {
		return nil, fmt.Errorf("protobuf conversion failed: %w", err)
	}

	// Phase 5: Generate outputs
	binaryData, err := proto.Marshal(compiledPolicy)
	if err != nil {
		return nil, fmt.Errorf("binary serialization failed: %w", err)
	}

	jsonData, err := protojson.Marshal(compiledPolicy)
	if err != nil {
		return nil, fmt.Errorf("JSON serialization failed: %w", err)
	}

	// Phase 6: Generate policy fingerprint
	fingerprint := c.generatePolicyFingerprint(compiledPolicy)

	// Phase 7: Final validation
	validationReport, err := c.validateCompiledPolicy(compiledPolicy)
	if err != nil {
		return nil, fmt.Errorf("final validation failed: %w", err)
	}

	// Phase 8: Generate metadata
	metadata := &CompilationMetadata{
		CompilerVersion:   "1.0.0",
		CompilationTime:   startTime,
		OptimizationLevel: c.optimizationLevel,
		SourceHash:        c.calculateSourceHash(yamlPolicy),
		Dependencies:      []string{},
		Warnings:          []CompilationWarning{},
		Performance: &PerformanceMetrics{
			CompilationTime:  time.Since(startTime),
			MemoryUsage:      0, // Would be populated by actual memory profiling
			OptimizationTime: optimizationStats.OptimizationTime,
		},
		Schema: &SchemaInfo{
			SchemaVersion: "1.0.0",
			Jurisdiction:  yamlPolicy.Jurisdiction,
			AssetClass:    yamlPolicy.AssetClass,
		},
	}

	if c.auditMode && auditTrail != nil {
		auditTrail.EndTime = time.Now()
		c.finalizeAuditTrail(auditTrail, compiledPolicy)
	}

	return &CompilationResult{
		CompiledPolicy:    compiledPolicy,
		BinaryData:        binaryData,
		JSONData:          jsonData,
		PolicyFingerprint: fingerprint,
		Metadata:          metadata,
		OptimizationStats: optimizationStats,
		ValidationReport:  validationReport,
		AuditTrail:        auditTrail,
	}, nil
}

// OptimizePredicateTree optimizes a single predicate tree for efficient evaluation
func (c *ComplianceCompiler) OptimizePredicateTree(predicate *parser.Predicate) (*parser.Predicate, error) {
	if predicate == nil {
		return nil, fmt.Errorf("predicate cannot be nil")
	}

	// Create a deep copy for optimization
	optimized := c.deepCopyPredicate(predicate)

	// Apply optimization strategies based on optimization level
	if c.optimizationLevel >= 1 {
		// Basic optimizations
		optimized = c.flattenLogicalOperations(optimized)
		optimized = c.eliminateRedundantConditions(optimized)
		optimized = c.reorderConditionsForOptimalEvaluation(optimized)
	}

	if c.optimizationLevel >= 2 {
		// Aggressive optimizations
		optimized = c.convertCommonPatterns(optimized)
		optimized = c.foldConstantExpressions(optimized)
		optimized = c.generateIndexHints(optimized)
	}

	return optimized, nil
}

// ValidateCompiledPolicy performs comprehensive validation of the compiled policy
func (c *ComplianceCompiler) ValidateCompiledPolicy(policy *parser.CompliancePolicy, schema *PolicySchema) error {
	if policy == nil {
		return fmt.Errorf("policy cannot be nil")
	}

	// Validate field references against known schemas
	if err := c.validateFieldReferences(policy, schema); err != nil {
		return fmt.Errorf("field reference validation failed: %w", err)
	}

	// Check predicate logic for completeness and consistency
	if err := c.validatePredicateLogic(policy); err != nil {
		return fmt.Errorf("predicate logic validation failed: %w", err)
	}

	// Verify attestation requirements are achievable
	if err := c.validateAttestationRequirements(policy, schema); err != nil {
		return fmt.Errorf("attestation validation failed: %w", err)
	}

	// Ensure enforcement configurations are valid
	if err := c.validateEnforcementConfiguration(policy, schema); err != nil {
		return fmt.Errorf("enforcement validation failed: %w", err)
	}

	return nil
}

// Optimization strategies implementation

// flattenLogicalOperations flattens nested AND/OR operations where possible
func (c *ComplianceCompiler) flattenLogicalOperations(predicate *parser.Predicate) *parser.Predicate {
	// Implementation would recursively traverse and flatten logical operations
	// Example: ((A AND B) AND C) -> (A AND B AND C)
	// For now, return the predicate as-is
	return predicate
}

// eliminateRedundantConditions removes duplicate and redundant conditions
func (c *ComplianceCompiler) eliminateRedundantConditions(predicate *parser.Predicate) *parser.Predicate {
	// Implementation would identify and remove redundant conditions
	// Example: (A AND A) -> A, (A OR (A AND B)) -> A
	// For now, return the predicate as-is
	return predicate
}

// reorderConditionsForOptimalEvaluation reorders conditions for short-circuiting
func (c *ComplianceCompiler) reorderConditionsForOptimalEvaluation(predicate *parser.Predicate) *parser.Predicate {
	// Implementation would analyze conditions and reorder for optimal evaluation
	// Place cheaper/faster conditions first for short-circuiting
	// For now, return the predicate as-is
	return predicate
}

// convertCommonPatterns converts common patterns to more efficient representations
func (c *ComplianceCompiler) convertCommonPatterns(predicate *parser.Predicate) *parser.Predicate {
	// Implementation would identify and convert common patterns
	// Example: (field >= min AND field <= max) -> field IN [min, max]
	// For now, return the predicate as-is
	return predicate
}

// foldConstantExpressions pre-evaluates constant expressions
func (c *ComplianceCompiler) foldConstantExpressions(predicate *parser.Predicate) *parser.Predicate {
	// Implementation would identify and evaluate constant sub-expressions
	// Example: (2 + 3) * 4 -> 20
	// For now, return the predicate as-is
	return predicate
}

// generateIndexHints generates hints for efficient field access
func (c *ComplianceCompiler) generateIndexHints(predicate *parser.Predicate) *parser.Predicate {
	// Implementation would analyze field access patterns and generate optimization hints
	// For now, return the predicate as-is
	return predicate
}

// Validation helper methods

// validateInputPolicy performs initial validation of the parsed YAML policy
func (c *ComplianceCompiler) validateInputPolicy(policy *parser.CompliancePolicy) error {
	if policy == nil {
		return fmt.Errorf("policy cannot be nil")
	}

	if policy.PolicyId == "" {
		return fmt.Errorf("policy_id is required")
	}

	if policy.Version == "" {
		return fmt.Errorf("version is required")
	}

	if policy.Jurisdiction == "" {
		return fmt.Errorf("jurisdiction is required")
	}

	if len(policy.Rules) == 0 {
		return fmt.Errorf("policy must contain at least one rule")
	}

	// Validate against jurisdiction schema if available
	if schema, exists := c.schemas[policy.Jurisdiction]; exists {
		if err := c.validateAgainstSchema(policy, schema); err != nil {
			return fmt.Errorf("schema validation failed: %w", err)
		}
	}

	return nil
}

// applyPolicyTemplates applies any relevant policy templates
func (c *ComplianceCompiler) applyPolicyTemplates(policy *parser.CompliancePolicy) (*parser.CompliancePolicy, error) {
	// For now, return the policy as-is
	// In a full implementation, this would merge template rules and configurations
	return policy, nil
}

// optimizePolicy applies various optimization strategies to the policy
func (c *ComplianceCompiler) optimizePolicy(policy *parser.CompliancePolicy, stats *OptimizationStats) (*parser.CompliancePolicy, error) {
	optimizationStart := time.Now()

	stats.OriginalPredicates = c.countPredicates(policy)

	// Create a copy for optimization
	optimizedPolicy := c.deepCopyPolicy(policy)

	// Apply optimizations based on level
	if c.optimizationLevel >= 1 {
		// Basic optimizations
		if err := c.optimizePredicateTreesInPolicy(optimizedPolicy, stats); err != nil {
			return nil, fmt.Errorf("predicate optimization failed: %w", err)
		}

		if err := c.eliminateDuplicateConditions(optimizedPolicy, stats); err != nil {
			return nil, fmt.Errorf("duplicate elimination failed: %w", err)
		}
	}

	if c.optimizationLevel >= 2 {
		// Aggressive optimizations
		if err := c.performConstantFolding(optimizedPolicy, stats); err != nil {
			return nil, fmt.Errorf("constant folding failed: %w", err)
		}

		if err := c.generateIndexHintsForPolicy(optimizedPolicy, stats); err != nil {
			return nil, fmt.Errorf("index hint generation failed: %w", err)
		}
	}

	stats.OptimizedPredicates = c.countPredicates(optimizedPolicy)
	stats.OptimizationTime = time.Since(optimizationStart)

	// Calculate compression ratio
	originalSize := c.calculatePolicySize(policy)
	optimizedSize := c.calculatePolicySize(optimizedPolicy)
	if originalSize > 0 {
		stats.CompressionRatio = float64(optimizedSize) / float64(originalSize)
	}

	return optimizedPolicy, nil
}

// Utility methods for compilation process

func (c *ComplianceCompiler) convertToProtobuf(policy *parser.CompliancePolicy) (*parser.CompliancePolicy, error) {
	// The policy is already in protobuf-compatible format
	// In a real implementation, this would handle any final conversions
	return policy, nil
}

func (c *ComplianceCompiler) generatePolicyFingerprint(policy *parser.CompliancePolicy) string {
	// Create a deterministic hash of the policy
	data, _ := proto.Marshal(policy)
	hash := sha256.Sum256(data)
	return hex.EncodeToString(hash[:])
}

func (c *ComplianceCompiler) calculateSourceHash(policy *parser.CompliancePolicy) string {
	// Calculate hash based on policy content for change detection
	content := fmt.Sprintf("%s:%s:%s", policy.PolicyId, policy.Version, policy.Jurisdiction)
	hash := sha256.Sum256([]byte(content))
	return hex.EncodeToString(hash[:])
}

func (c *ComplianceCompiler) validateCompiledPolicy(policy *parser.CompliancePolicy) (*ValidationReport, error) {
	report := &ValidationReport{
		IsValid:  true,
		Errors:   make([]ValidationError, 0),
		Warnings: make([]ValidationWarning, 0),
		FieldValidation: &FieldValidationResult{
			ValidFields:     []string{},
			InvalidFields:   []string{},
			MissingRequired: []string{},
			UnknownFields:   []string{},
			FieldErrors:     make(map[string][]string),
			FieldAnalysis: &FieldUsageAnalysis{
				TotalFields:     0,
				UniqueFields:    0,
				MostUsedFields:  []string{},
				UnusedFields:    []string{},
				FieldComplexity: make(map[string]int),
				AccessPatterns:  make(map[string][]string),
			},
		},
		PredicateAnalysis: &PredicateAnalysisResult{
			TotalPredicates:     c.countPredicates(policy),
			PredicateDepth:      c.calculateMaxDepth(policy),
			LogicalOperators:    make(map[string]int),
			ComparisonOperators: make(map[string]int),
			ComplexityScore:     c.calculateComplexityScore(policy),
			CircularReferences:  []string{},
			OptimizationHints:   []PredicateOptimizationHint{},
		},
		AttestationCheck: &AttestationValidationResult{
			ValidAttestations:   []string{},
			InvalidAttestations: []string{},
			MissingRequirements: []string{},
			UnsupportedTypes:    []string{},
			AttestationAnalysis: &AttestationAnalysis{
				TotalAttestations:    len(policy.Attestations),
				RequiredAttestations: c.countRequiredAttestations(policy),
				OptionalAttestations: len(policy.Attestations) - c.countRequiredAttestations(policy),
				AttestationTypes:     make(map[string]int),
				EstimatedCost:        0.0,
				EstimatedTime:        0,
				RiskAssessment: &RiskAssessment{
					OverallRisk:     "medium",
					RiskFactors:     []RiskFactor{},
					MitigationSteps: []string{},
					ComplianceGaps:  []ComplianceGap{},
				},
			},
			DataSourceValidation: &DataSourceValidation{
				ValidSources:       []string{},
				InvalidSources:     []string{},
				UnavailableSources: []string{},
				SourceReliability:  make(map[string]float64),
				AccessRequirements: make(map[string][]string),
			},
		},
		EnforcementCheck: &EnforcementValidationResult{
			ValidConfigurations:   []string{},
			InvalidConfigurations: []string{},
			MissingActions:        []string{},
			UnsupportedActions:    []string{},
			EnforcementAnalysis: &EnforcementAnalysis{
				EnforcementLevel: policy.Enforcement.Level,
				TotalActions:     len(policy.Enforcement.Actions),
				ActionTypes:      make(map[string]int),
				EscalationPaths:  []string{},
				ResponseTime:     0,
				ResourceRequirements: &ResourceRequirements{
					ComputeResources: &ComputeResources{
						CPUCores:      1,
						MemoryMB:      512,
						GPURequired:   false,
						EstimatedLoad: 0.1,
					},
					StorageResources: &StorageResources{
						DiskSpaceGB:    1,
						IOPSRequired:   100,
						BackupRequired: true,
						RetentionDays:  365,
					},
					NetworkResources: &NetworkResources{
						BandwidthMbps:        10,
						LatencyRequirement:   100,
						ExternalServices:     []string{},
						SecurityRequirements: []string{},
					},
					HumanResources: &HumanResources{
						OperatorsRequired:  1,
						SkillLevels:        []string{"intermediate"},
						AvailabilityHours:  "24/7",
						EscalationContacts: []string{},
					},
				},
			},
		},
		PolicyImpact: &PolicyImpactAssessment{
			BusinessImpact: &BusinessImpact{
				ProcessesAffected:    []string{},
				StakeholdersImpacted: []string{},
				BusinessContinuity:   "low_impact",
				CustomerImpact:       "minimal",
				RevenueImpact: &RevenueImpact{
					EstimatedChange:   0.0,
					ChangeType:        "neutral",
					TimeToRealization: 0,
					ConfidenceLevel:   0.5,
				},
			},
			TechnicalImpact: &TechnicalImpact{
				SystemsAffected: []string{},
				PerformanceImpact: &PerformanceImpact{
					LatencyChange:       0,
					ThroughputChange:    1.0,
					ResourceUtilization: 0.1,
					CacheHitRate:        0.8,
				},
				ScalabilityImpact: &ScalabilityImpact{
					HorizontalScaling: "good",
					VerticalScaling:   "good",
					ScalingComplexity: "low",
					MaxSupportedLoad:  10000,
				},
				SecurityImpact: &SecurityImpact{
					ThreatModel:         []string{},
					VulnerabilityRisk:   "low",
					DataExposureRisk:    "low",
					AccessControlImpact: "minimal",
					AuditRequirements:   []string{},
				},
				MaintenanceImpact: &MaintenanceImpact{
					MaintenanceComplexity: "low",
					UpdateFrequency:       "monthly",
					SkillRequirements:     []string{"basic"},
					MaintenanceWindows:    []string{"weekend"},
				},
			},
			ComplianceImpact: &ComplianceImpact{
				RegulatoryFrameworks:  []string{},
				ComplianceLevel:       "compliant",
				AuditRequirements:     []string{},
				ReportingRequirements: []string{},
				ComplianceGaps:        []ComplianceGap{},
				RemediationPlan: &RemediationPlan{
					Steps:              []RemediationStep{},
					Timeline:           0,
					RequiredResources:  []string{},
					ResponsibleParties: []string{},
					SuccessMetrics:     []string{},
				},
			},
			OperationalImpact: &OperationalImpact{
				ProcessChanges:         []ProcessChange{},
				TrainingRequirements:   []TrainingRequirement{},
				ToolingRequirements:    []ToolingRequirement{},
				MonitoringRequirements: []MonitoringRequirement{},
			},
			FinancialImpact: &FinancialImpact{
				ImplementationCost: &CostBreakdown{
					TotalCost:      0.0,
					CostCategories: make(map[string]float64),
					Timeline:       make(map[string]float64),
					Currency:       "USD",
					Assumptions:    []string{},
				},
				OperationalCost: &CostBreakdown{
					TotalCost:      0.0,
					CostCategories: make(map[string]float64),
					Timeline:       make(map[string]float64),
					Currency:       "USD",
					Assumptions:    []string{},
				},
				ComplianceCost: &CostBreakdown{
					TotalCost:      0.0,
					CostCategories: make(map[string]float64),
					Timeline:       make(map[string]float64),
					Currency:       "USD",
					Assumptions:    []string{},
				},
				ROIAnalysis: &ROIAnalysis{
					InitialInvestment: 0.0,
					ExpectedReturns:   0.0,
					PaybackPeriod:     0,
					ROI:               0.0,
					NPV:               0.0,
					IRR:               0.0,
				},
				CostBenefitAnalysis: &CostBenefitAnalysis{
					TotalCosts:          0.0,
					TotalBenefits:       0.0,
					NetBenefit:          0.0,
					BenefitCostRatio:    1.0,
					QualitativeBenefits: []string{},
					RiskAdjustments:     make(map[string]float64),
				},
			},
		},
	}

	// Perform comprehensive validation and populate the report
	// For now, return a basic valid report
	return report, nil
}
